# libmdbx-msvc

./: .gitmodules  CMakeLists.txt  README.md  build_mdbx.bat  build_test.bat
